CNAME and 404 update

--- a/404.md
+++ b/404.md
@@ -1,13 +1,13 @@
 ---
-title: "404"
-excerpt: "Page Not Found"
+title: "404 ?"
+excerpt: "Hmm something seems broken, lets fix it..."
 permalink: 404.html
 indexing: false
 sitemap: false
 ---
 
-Sorry, but the page could not be found.
+Lets make sure the link is right, or the net is up else why the page is not found
 
-Are you looking for:
+Or maybe you are looking for:
 
 {% include nav-default.html %}
